Initial Feed Concept Complete

--- a/public/index.html
+++ b/public/index.html
@@ -155,6 +155,11 @@
           <h3>View All Followers</h3>
           <input type="submit" value="View All Followers">
         </form>
+
+        <form id="view-freets-by-following">
+          <h3>Feed</h3>
+          <input type="submit" value="Feed">
+        </form>
       </div>
     </section>
     <section>
